# Ballistics-CPP

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/simulation/: Environment.cpp  Environment.hpp  Projectile.cpp  Projectile.hpp
src/util/math/: Vec2.hpp
